<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="error_device_offline">Your device is offline</string>
    <string name="error_account_inactive">Your account is inactive. Please activate your account in order to continue using Wize AdBlock VPN.</string>
    <string name="error_account_inactive_after_restore">This does not seem to be a valid active account. If you believe this is a mistake, please contact us by tapping the help icon at the top.</string>
    <string name="error_account_invalid">This account ID seems invalid.</string>
    <string name="error_creating_account">Could not create a new account. Please try again later.</string>
    <string name="error_fetching_data">This action could not be completed. Make sure you are online, and try again later. If the problem persists, please contact us by tapping the help icon at the top.</string>
    <string name="error_tunnel">Could not establish the VPN. Please restart your device, or remove Wize AdBlock VPN profile in system settings, and try again.</string>
    <string name="error_vpn">Could not establish the VPN. Please restart your device, or remove Wize AdBlock VPN profile in system settings, and try again.</string>
    <string name="error_vpn_perms">No permissions granted to create a VPN profile.</string>
    <string name="error_vpn_no_current_lease">Please select a location first.</string>
    <string name="error_vpn_too_many_leases">You reached your devices limit. Please remove one of your devices and try again.</string>
    <string name="error_vpn_expired">The VPN is disabled. Please update your subscription to continue using Wize AdBlock VPN</string>
    <string name="error_payment_inactive_after_restore">Your previous payment was restored, but the subscription has already expired. If you believe this is a mistake, please contact us by tapping the help icon at the top.</string>
    <string name="error_payment_failed">Payments are unavailable at this moment. Make sure you are online, and try again later. If the problem persists, please contact us by tapping the help icon at the top.</string>
    <string name="error_payment_failed_alternative">Could not complete your payment. Please make sure your data is correct, and try again. If the problem persists, please contact us by tapping the help icon at the top.</string>
    <string name="error_payment_not_available">Payments are unavailable for this device. Either Apple Pay is not activated, or we do not handle purchases in your country yet.</string>
    <string name="error_payment_canceled">The payment has been canceled. You have not been charged.</string>
    <string name="error_pack_install">Could not install (or uninstall) this feature. Please try again later.</string>
    <string name="error_location_failed_fetching">Could not fetch locations.</string>
    <string name="error_unknown">An unknown problem occurred. Please try again. If the problem persists, please contact us by tapping the help icon at the top.</string>
    <string name="error_blocka_dns_in_filtering_mode">Wize AdBlock VPN DNS is currently supported only in Plus mode. Please choose another DNS and try again.</string>
    <string name="universal_action_continue">Continue</string>
    <string name="universal_action_cancel">Cancel</string>
    <string name="universal_action_close">Close</string>
    <string name="universal_action_done">Done</string>
    <string name="universal_action_try_again">Try again</string>
    <string name="universal_action_learn_more">Learn more</string>
    <string name="universal_action_help">Help</string>
    <string name="universal_action_show_log">Logs</string>
    <string name="universal_action_share_log">Share log</string>
    <string name="universal_action_copy">Copy</string>
    <string name="universal_action_save">Save</string>
    <string name="universal_action_contact_us">Contact us</string>
    <string name="universal_action_support">Support</string>
    <string name="universal_action_upgrade">Upgrade to Wize AdBlock VPN</string>
    <string name="universal_action_upgrade_short">Upgrade</string>
    <string name="universal_action_yes">Yes</string>
    <string name="universal_action_no">No</string>
    <string name="universal_action_donate">Donate</string>
    <string name="universal_action_community">Community</string>
    <string name="universal_action_open_in_browser">Open in browser</string>
    <string name="universal_action_more">More</string>
    <string name="universal_action_download">Download</string>
    <string name="universal_action_news">News</string>
    <string name="universal_action_delete">Delete</string>
    <string name="universal_action_hide">Hide</string>
    <string name="universal_action_select">Select</string>
    <string name="universal_action_selected">Selected</string>
    <string name="universal_action_search">Search</string>
    <string name="universal_action_filter">Filter</string>
    <string name="universal_action_clear">Clear</string>
    <string name="universal_action_revoke">Revoke</string>
    <string name="universal_label_help">Help</string>
    <string name="universal_label_welcome">Welcome!</string>
    <string name="universal_label_none">None</string>
    <string name="universal_status_processing">Processing... Please wait.</string>
    <string name="universal_status_copied_to_clipboard">Copied to Clipboard</string>
    <string name="universal_status_restart_required">Please restart the app for the changes to take effect.</string>
    <string name="universal_status_redirect">Continue with the Wize AdBlock VPN App</string>
    <string name="universal_status_confirm">Are you sure you want to proceed?</string>
    <string name="alert_error_header">Ooops!</string>
    <string name="alert_vpn_expired_header">Wize AdBlock VPN expired</string>
    <string name="alert_download_link_body">For security reasons, to download a file, we need to open this website in your browser. Then, please tap the download link again.</string>
    <string name="notification_vpn_expired_header">Wize AdBlock VPN subscription expired</string>
    <string name="notification_vpn_expired_subtitle">The VPN is disabled</string>
    <string name="notification_vpn_expired_body">Please update your subscription to continue using Wize AdBlock VPN</string>
    <string name="notification_desc_settings">Swipe the notification left or right for settings.</string>
    <string name="notification_update_header">An update is available</string>
    <string name="alert_update_body">Wize AdBlock VPN %s is now available for download. We recommend keeping the app up to date, and downloading it only from our official sources.</string>
    <string name="update_label_updated">Updated!</string>
    <string name="update_desc_updated">You are now using the newest version of Wize AdBlock VPN! Remember, donating or subscribing to Wize AdBlock VPN Plus allows us to continue improving the app.</string>
    <string name="update_downloading_description">The update is now downloading, and you should see the installation prompt shortly.</string>
    <string name="account_active_forever">Forever</string>
    <string name="account_active_forever_full">Active forever</string>
    <string name="main_ask_for_permissions_header">Just one more step</string>
    <string name="main_ask_for_permissions_description">To improve privacy, Wize AdBlock VPN uses a VPN Configuration to forward some requests to DNS. You will be asked to allow it in the next step.</string>
    <string name="main_share_message">Wize AdBlock VPN for iOS helped me block %s ads and trackers!</string>
    <string name="main_rate_us_header">Rate us!</string>
    <string name="main_rate_us_description">How do you like Wize AdBlock VPN so far?</string>
    <string name="main_rate_us_on_app_store">Would you help us by rating Wize AdBlock VPN on App Store?</string>
    <string name="main_rate_us_action_sure">Sure!</string>
    <string name="main_tab_home">Home</string>
    <string name="main_tab_activity">Activity</string>
    <string name="main_tab_advanced">Advanced</string>
    <string name="main_tab_settings">Settings</string>
    <string name="main_label_use_side_menu">Use side menu to navigate</string>
    <string name="home_ads_counter_footnote">ads and trackers forwarded since installation</string>
    <string name="home_power_off_menu_header">What would you like to do?</string>
    <string name="home_power_action_turn_on">Turn on</string>
    <string name="home_power_action_turn_off">Turn off</string>
    <string name="home_power_action_pause">Pause for 5 min</string>
    <string name="home_status_paused">Paused</string>
    <string name="home_status_active">Active</string>
    <string name="home_status_deactivated">Deactivated</string>
    <string name="home_action_tap_to_activate">Tap to activate</string>
    <string name="home_status_detail_paused">paused until timer ends</string>
    <string name="home_status_detail_active">Detecting *suspicious requests*</string>
    <string name="home_status_detail_active_with_counter">Forwarded *%s* suspicious ads, virus, trackers to outer space</string>
    <string name="home_status_detail_active_slim">Wize AdBlock VPN is active</string>
    <string name="home_status_detail_plus">*+* protecting your *privacy*</string>
    <string name="home_status_detail_progress">please wait...</string>
    <string name="home_plus_button_deactivated">Wize AdBlock VPN+ deactivated</string>
    <string name="home_plus_button_select_location">Select location</string>
    <string name="home_plus_button_location">Location: *%s*</string>
    <string name="home_level_low">Protection: Low</string>
    <string name="home_level_medium">Protection: Medium</string>
    <string name="home_level_high">Protection: High</string>
    <string name="pack_section_header">Advanced Features</string>
    <string name="pack_section_header_details">Feature Details</string>
    <string name="pack_action_install">GET</string>
    <string name="pack_action_update">UPDATE</string>
    <string name="pack_action_uninstall">REMOVE</string>
    <string name="pack_author">Author</string>
    <string name="pack_configurations_header">Configurations</string>
    <string name="pack_information_header">More</string>
    <string name="pack_tags_header">Tags</string>
    <string name="pack_tags_none">None</string>
    <string name="pack_category_highlights">Highlights</string>
    <string name="pack_category_active">Active</string>
    <string name="pack_category_all">All</string>
    <string name="advanced_section_header_packs">Forwarding lists</string>
    <string name="advanced_section_slugline_packs">Activate for more restrictive forwarding</string>
    <string name="advanced_section_slugline_apps">Choose apps that should never be forwarded</string>
    <string name="advanced_section_slugline_encryption">Adjust your encryption level and DNS</string>
    <string name="app_settings_section_system">System</string>
    <string name="app_settings_action_app_info">Open App Information</string>
    <string name="app_settings_action_vpn_profile">Open VPN Profile</string>
    <string name="app_settings_action_notifications">Open Notification Settings</string>
    <string name="app_settings_section_details">Details</string>
    <string name="app_settings_section_advanced">Advanced</string>
    <string name="app_settings_section_use_foreground">Keep alive</string>
    <string name="settings_system_open_battery_settings">Open battery settings</string>
    <string name="settings_system_open_data_settings">Open data usage settings</string>
    <string name="settings_system_open_background_settings">Open background settings</string>
    <string name="settings_advanced_hide_history_from_notifications">Hide blocking history from notification</string>
</resources>