<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Blokada.
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  ~
  ~ Copyright © 2022 Blocka AB. All rights reserved.
  ~
  ~ @author Karol Gusak (karol@blocka.net)
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <PreferenceCategory-->
<!--        app:key="app_category"-->
<!--        app:title="@string/account_section_header_general">-->

<!--        <ListPreference-->
<!--            app:icon="@drawable/ic_baseline_color_lens_24"-->
<!--            app:key="app_theme"-->
<!--            app:title="@string/app_settings_theme_label"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        &lt;!&ndash;        <ListPreference&ndash;&gt;-->
<!--        &lt;!&ndash;            app:icon="@drawable/ic_baseline_backup_24"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:key="app_backup"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:title="@string/app_settings_backup"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:useSimpleSummaryProvider="true" />&ndash;&gt;-->

<!--        &lt;!&ndash;        <Preference&ndash;&gt;-->
<!--        &lt;!&ndash;            app:icon="@drawable/ic_baseline_refresh_24"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:key="app_startonboot"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:title="@string/app_settings_start_on_boot" />&ndash;&gt;-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory
        app:key="app_category_advanced"
        app:title="@string/app_settings_section_advanced">

        <ListPreference
            app:icon="@drawable/ic_baseline_app_settings_alt_24"
            app:key="app_useforeground"
            app:title="@string/app_settings_section_use_foreground"
            app:useSimpleSummaryProvider="true" />

        <!--        <ListPreference-->
        <!--            app:icon="@drawable/ic_baseline_open_in_browser_24"-->
        <!--            app:key="app_browser"-->
        <!--            app:title="@string/app_settings_browser_label"-->
        <!--            app:useSimpleSummaryProvider="true" />-->

        <SwitchPreference
            app:key="app_hide_history_from_notification"
            app:title="@string/settings_advanced_hide_history_from_notifications"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="app_category_system"
        app:title="@string/app_settings_section_system">
        <Preference
            app:key="app_info"
            app:title="@string/app_settings_action_app_info" />
        <Preference
            app:key="app_vpn"
            app:title="@string/app_settings_action_vpn_profile" />
        <Preference
            app:key="app_notifications"
            app:title="@string/app_settings_action_notifications" />
        <Preference
            app:key="app_battery"
            app:title="@string/settings_system_open_battery_settings" />
        <Preference
            app:key="app_data"
            app:title="@string/settings_system_open_data_settings" />
        <Preference
            app:key="app_background"
            app:title="@string/settings_system_open_background_settings" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="app_category_debug"
        app:title="@string/app_settings_section_details">

        <Preference
            app:enabled="true"
            app:key="app_details"
            app:summary="..."
            app:title="" />

    </PreferenceCategory>

</PreferenceScreen>